# plume

./: DEV.md  README.md  SPECIFICATIONS.md  package.xml  pyproject.toml  setup.py  svntree.py
docs/: SPECIFICATIONS.md
freecad/plume/: InitGui.py  __init__.py  pl_tools.py  svntree.py  version.py
freecad/plume/pysvn/svn/: local.py
freecad/plume/pysvn/tests/: test_local.py
freecad/plume/resources/ui/: preferences.ui
freecad/plume/svn/: common.py  local.py  remote.py
freecad/plume/tools/: Common.py  FCObjects.py  Project.py  Repository.py
freecad/plume/utils/: fc_utils.py  plume_svn.py  selector.py  svnfilesystemmodel.py  widgets.py
tests/: test_remote.py
